--- a/modules/figurate-log/build.gradle
+++ b/modules/figurate-log/build.gradle
@@ -1,5 +1,11 @@
+ext.pomName = 'Figurate Logging'
+
+description = '''\
+Module logging support
+'''
+
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.5'
+    compile "org.slf4j:slf4j-api:$slf4jVersion"
     compile 'commons-logging:commons-logging-api:1.1'
     compile 'org.apache.logging.log4j:log4j-api:2.0-beta9'
     compile 'org.apache.felix:org.apache.felix.log:1.0.1'
