--- a/modules/figurate-security/build.gradle
+++ b/modules/figurate-security/build.gradle
@@ -5,9 +5,11 @@ Support for securing endpoints and resources using Authentication, Authorisation
 '''
 
 dependencies {
-    compile project(':figurate-common')
+    compile project(':figurate-common'), 'javax.servlet:javax.servlet-api:3.1.0'
 
-    provided 'commons-codec:commons-codec:1.9'
+    compile "javax.ws.rs:javax.ws.rs-api:$jaxrsVersion", 'org.amdatu.web.rest.doc:org.amdatu.web.rest.doc:1.1.1'
+
+    compile 'commons-codec:commons-codec:1.9'
 
     testCompile project(':figurate-osgi')
 }
